Backwards compatibility for Java 8, switch to Github Actions, check compatibility up to Java 12 (#123)
* backwards compatibility for java 8

* test out github actions since travis is slow

* change default github action triggeR

* simplify build

* backwards compatibility changes for strings & vars, remove travis

* add ci checks for java 9-13

* remove java 13 which is incompatible with gradle 5

* cleanup gradle warnings